testdata/baselines/reference/compiler/declarationEmitForMixinsWithStaticAccessors2.errors.txt
/a.ts(20,11): error TS2417: Class static side 'typeof C' incorrectly extends base class static side 'typeof A & typeof B'.
  Types of property 'prototype' are incompatible.
    Type 'C' is not assignable to type 'A & B'.
      Property 'y' is missing in type 'C' but required in type 'B'.
/a.ts(20,21): error TS2510: Base constructors must all have the same return type.


==== /a.ts (2 errors) ====
    function mix<T extends new (...args: any[]) => any, U extends new (...args: any[]) => any>(
        base1: T, base2: U
    ): T & U {
        return null as any;
    }
    
    class A {
        static get shared(): number { return 1; }
        static set shared(v: number) { }
        x: string = "";
    }
    
    class B {
        static get shared(): number { return 2; }
        static set shared(v: number) { }
        y: number = 0;
    }
    
    function make() {
        class C extends mix(A, B) {
              ~
!!! error TS2417: Class static side 'typeof C' incorrectly extends base class static side 'typeof A & typeof B'.
!!! error TS2417:   Types of property 'prototype' are incompatible.
!!! error TS2417:     Type 'C' is not assignable to type 'A & B'.
!!! error TS2417:       Property 'y' is missing in type 'C' but required in type 'B'.
!!! related TS2728 /a.ts:16:5: 'y' is declared here.
                        ~~~~~~~~~
!!! error TS2510: Base constructors must all have the same return type.
            z: boolean = true;
        }
        return C;
    }
    
    export const MixedClass = make();
    